# eldenring-practice-tool

./: .gitattributes  CHANGELOG.md  Cargo.toml  jdsd_er_practice_tool.toml
.github/workflows/: build.yml  release.yml  test.yml
lib/data/: RELEASE-README.txt
lib/libeldenring/: Cargo.toml
lib/libeldenring/src/: pointers.rs
lib/macro-param/: Cargo.toml
lib/macro-param/src/: lib.rs
lib/no-logo/: Cargo.toml
lib/no-logo/src/: lib.rs
lib/param-tinkerer/: Cargo.toml
practice-tool/: Cargo.toml  build.rs
practice-tool/src/: config.rs  er_params.rs  lib.rs  practice_tool.rs  update.rs  util.rs
practice-tool/src/widgets/: character_stats.rs  cycle_color.rs  cycle_speed.rs  deathcam.rs  item_ids.json  item_spawn.rs  itemdropdowncer.csv  mod.rs  pinyin_match.rs  savefile_manager.rs  target.rs  warp.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/codegen/: README.md  convert_item_ids_cer.py  item_ids.rs  item_ids.yml  item_ids_cer.yml  mod.rs
