[package]
name = "eldenring-practice-tool"
version.workspace = true
authors.workspace = true
edition = "2021"

[[bin]]
name = "jdsd_er_practice_tool"
path = "src/bin/jdsd_er_practice_tool.rs"

[[bin]]
name = "install"
path = "src/bin/install.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "libjdsd_er_practice_tool"

[dependencies]
anyhow = "1.0.103"
const_format = "0.2.36"
csv = "1.4.0"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
open = "5.3.6"
pinyin = { version = "0.11.0", default-features = false, features = ["plain", "heteronym"] }
pkg-version = "1.0.0"
regex = "1.13.0"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_path_to_error = "0.1.20"
serde_yaml = "0.9.34"
textwrap-macros = "0.3.0"
toml = "1.1.2"
tracing-subscriber = "0.3.23"
ureq = { version = "3.3.0", features = ["json"] }

libeldenring = { path = "../lib/libeldenring" }

hudhook.workspace = true
imgui.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
windows.workspace = true
practice-tool-core.workspace = true

[build-dependencies]
embed-resource = "3.0.11"
