[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.103"
dotenv = "0.15.0"
heck = "0.5.0"
pelite = "0.10.0"
rayon = "1.12.0"
regex = "1.13.0"
serde = "1.0.228"
serde_json = "1.0.150"
serde_yaml = "0.9.34"
textwrap = "0.16.2"
widestring = "1.2.1"
zip = "8.6.0"

once_cell.workspace = true
practice-tool-tasks.workspace = true
